--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -1,3 +1,9 @@
+$top-black : rgb(24,21,21);
+
+@mixin sizes($width, $height) {
+    max-width: $width;
+    max-height: $height;
+}
 
 * {
     margin: 0;
@@ -10,7 +16,7 @@ body {
 }
 
 .bru-dark {
-    background-color: rgb(24,21,21);
+    background-color: $top-black;
 }
 
 .bru-white-text{
@@ -29,9 +35,10 @@ body {
     max-width: 100%;
 }
 
-.products  img {
-    max-height: 200px;
-    max-width: 200px;
+.products{
+    img {
+        @include sizes(200px, 200px);
+    }
 }
 
 
@@ -45,7 +52,7 @@ body {
 /* Navbar */
 
 .bru-navbar {
-    background-color: rgb(24,21,21);
+    background-color: $top-black;
     justify-content: center;
 }
 
@@ -53,32 +60,21 @@ body {
     color: white !important;
 }
  
-header img {
-    max-width: 100px;
-    max-height: 100px;
-    transition: transform .7s ease-in-out;
-    border-radius: 50% ;
+header {
+    img {
+        @include sizes(100px, 100px);
+        transition: transform .7s ease-in-out;
+        border-radius: 50% ;
+    }
 
-} 
-
-header img:hover {
-    transform: rotate(360deg);
+    img:hover {
+        transform: rotate(360deg);
+    }
 }
-
-/* Footer de redes sociales */
-
-/* footer {
-    padding: 15px;
-    text-align: center;
-} */
-/* contacto  */
-
-
 
 
 .contact_icon {
-    max-width: 100px;
-    max-height: 100px;
+    @include sizes(100px, 100px);
     min-width: 100px;
     min-height: 100px;
 }
@@ -92,21 +88,25 @@ header img:hover {
     box-shadow: black 20px;
 }
 
-.detail h2 {
-    text-decoration: underline;
-    font-size: 2rem;
-}
+.detail {
+    h2 {
+        text-decoration: underline;
+        font-size: 2rem;
+    }
 
-.detail ul {
-    list-style-type: none;
-}
+    ul {
+        list-style-type: none;
+    }
+} 
+
+
 
 /* Cosas del about us */
 
 .about_us {
     text-align: center;
-}
 
-.about_us img {
-    max-height: 300px;
+    img {
+        max-height: 300px;
+    }
 }
